--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta property="og:title" content="OnlyFans Chat-Room">
+  <meta property="og:description" content="Join the ultimate chat experience on Only Fans Chat! Connect with like-minded individuals, share exciting content, and explore a community where fun and creativity meet. Don't miss out on exclusive conversations and interactive features that make every moment special. Start chatting now!">
+  <meta property="og:image" content="https://media.discordapp.net/attachments/1307898117429133382/1322887456948879400/of-logo-b.png?ex=67728273&is=677130f3&hm=c922daa1fbf3eab8cf954fe5dc35a90f5c340528803ac56da90783de5cc0440e&=&format=webp&quality=lossless&width=468&height=468">
+  <meta property="og:url" content="https://only-fans.chat">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Video with Spoiler</title>
   <style>
     #spoiler {
