--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta property="og:url" content="https://only-fans.chat">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Video with Spoiler</title>
+  <title>OnlyFans Chat-Room</title>
   <style>
     #spoiler {
       position: absolute;
