--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
   <!-- Video Element -->
   <video id="video" autoplay muted>
-    <source src="your-video-url.mp4" type="video/mp4">
+    <source src="movie.mp4" type="video/mp4">
     Your browser does not support the video tag.
   </video>
 
