--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
   <!-- Spoiler Message -->
   <div id="spoiler">
-    Please click this text to confirm you are not a robot.
+    Please click this text to confirm you are not a robot
   </div>
 
   <!-- Video Element -->
